<resources>
    <string name="app_name"> Naunehal: Mobile Health Service </string>
    <string name="action_database">Database Manager</string>
    <string name="action_data_sync">Sync Data</string>
    <string name="btnDownload">Download Data</string>
    <string name="splashText"> </string>
    <string name="mobilehealthserviceform_heading">Mobile Health Service Form</string>
    <string name="lhwandhouseholdidentification_mainheading">LHW and Household Identification: </string>
    <string name="householdinformation_mainheading">Household Information: </string>
    <string name="mwra_mainheading">MWRA: </string>
    <string name="adolescent_mainheading">Adolescent: </string>
    <string name="vhc_mainheading">VHC: </string>
    <string name="btnSync">Download Data</string>
    <string name="btnUpload">Upload Data</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="splashText2">  </string>
    <string name="check_pending_forms">CHECK PENDING FORMS</string>
    <string name="open_new_form">OPEN NEW FORM</string>
    <string name="records_summary">Records Summary</string>
    <string name="main_menu">Main Menu</string>
    <string name="only_for_testing">ONLY FOR TESTING</string>
    <string name="database">Database</string>
    <string name="no"> No </string>
    <string name="dkn"> Don’t Know </string>
    <string name="none"> None </string>
    <string name="never"> Never</string>
    <string name="na"> Applicable /Not Available  </string>
    <string name="nap"> Not Applicable </string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="nav">Not Available </string>
    <string name="ref"> Refused </string>
    <string name="other"> Other </string>
    <string name="specify"> Please explain </string>
    <string name="year"> Year </string>
    <string name="month"> Month </string>
    <string name="weeks"> Week </string>
    <string name="days"> Day </string>
    <string name="hours"> Hour </string>
    <string name="minutes"> Minutes </string>
    <string name="kg"> Kilograms </string>
    <string name="km"> Kilometers </string>
    <string name="cm"> cm </string>
    <string name="in"> Inch </string>
    <string name="rupees">  Rupees </string>
    <string name="num"> Number </string>
    <string name="name"> Name </string>
    <string name="contactnum">Contact Number </string>
    <string name="checkHHpresent"> The name of head of the household corresponds to the line listing data.</string>
    <string name="newHHheadname"> Name of new head of the household </string>
    <string name="lhwinfo">Section: LHW Information</string>
    <string name="lhw01">Name of Taluka/Tehsil</string>
    <string name="lhw02">Name of reporting health facility </string>
    <string name="lhw03">Name/Code of LHW</string>
    <string name="hhidinfo">Section: Household Identification</string>
    <string name="hhi01">Khandan Number of selected Household</string>
    <string name="hhi02">Residential Address </string>
    <string name="hhi02a">Union Council Name</string>
    <string name="hhi02b">Village Name</string>
    <string name="hhi02c">Mohalla Name</string>
    <string name="hhi02d">Street Name and Number</string>
    <string name="hhi02e">Household Number</string>
    <string name="hhi03">Contact Number (optional)</string>
    <string name="hhinfo">Section: Household Member Information</string>
    <string name="hh01">Member Serial Number</string>
    <string name="hh02">Name</string>
    <string name="hh03">Is [NAME] male or female?</string>
    <string name="hh03a">Male</string>
    <string name="hh03b">Female</string>
    <string name="hh04">Date of Birth</string>
    <string name="hh04a">Date</string>
    <string name="hh04b">Month</string>
    <string name="hh04c">Year</string>
    <string name="hh05">Complete Age in Years</string>
    <string name="hh06">Marital Status</string>
    <string name="hh06a">Married</string>
    <string name="hh06b">Unmarried</string>
    <string name="hh06c">Widowed</string>
    <string name="hh06d">Divorced/Separated</string>
    <string name="hh07">Total Number of Live Children</string>
    <string name="hh08">Total Number of Pregnancies</string>
    <string name="hh09">What is the highest class (NAME) completed</string>
    <string name="hh09a">None</string>
    <string name="hh09b">Pre-Primary</string>
    <string name="hh09c">Primary (1-5)</string>
    <string name="hh09d">Middle (6-8)</string>
    <string name="hh09e">Secondary (9-10)</string>
    <string name="hh09f">Intermediate</string>
    <string name="hh09g">Graduation</string>
    <string name="hh09h">Masters</string>
    <string name="hh09i">PhD</string>
    <string name="hh09j">Diploma (IT/Electrical, Mechanical, Civil)</string>
    <string name="hh09k">Religious Education (Hafiz/Aalim)</string>
    <string name="hh09l">Don\'t Know</string>
    <string name="hh09m">Not Applicable</string>
    <string name="hh10">What is your occupation </string>
    <string name="hh10a">Housewife</string>
    <string name="hh10b">Unskilled Manual Labor</string>
    <string name="hh10c">Skilled Manual labor</string>
    <string name="hh10d">Agriculture</string>
    <string name="hh10e">Sales/Service</string>
    <string name="hh10f">Professional</string>
    <string name="hh10g">Student</string>
    <string name="hh10h">Unemployed</string>
    <string name="hh10i">Don\'t Know</string>
    <string name="hh10j">Not Applicable</string>
    <string name="hh11">Currently available in the Household</string>
    <string name="hh11a">Yes</string>
    <string name="hh11b">No</string>
    <string name="mwratitle">Section: Married Women of Reproductive Age (MWRA)</string>
    <string name="mwrahint">Note: This section will be repeated according to the number of MWRA available mentioned in Household Information. </string>
    <string name="mwra01">Name of MWRA/Respondent?</string>
    <string name="mwra02">Age of MWRA/Respondent?</string>
    <string name="mwra03">Currently Pregnant</string>
    <string name="mwra03a">Yes</string>
    <string name="mwra03b">No</string>
    <string name="mwra04">How many children do you have?</string>
    <string name="mwra05">Age of Last-born Child</string>
    <string name="mwra05a">Age in years</string>
    <string name="mwra05b">Age in months</string>
    <string name="mwra06">Gestational age of pregnancy</string>
    <string name="mwra07">Are you aware of family planning methods?</string>
    <string name="mwra07a">Yes</string>
    <string name="mwra07b">No</string>
    <string name="mwra08">If yes, who informed you?</string>
    <string name="mwra08a">LHW</string>
    <string name="mwra08b">Doctor (Public)</string>
    <string name="mwra08c">Doctor (Private)</string>
    <string name="mwra08d">LHV</string>
    <string name="mwra08e">CMW</string>
    <string name="mwra08f">Pharmacy</string>
    <string name="mwra08g">Friend/relative</string>
    <string name="mwra0896">Other (Specify)</string>
    <string name="mwra09">Does LHW visit your household in last three months?</string>
    <string name="mwra09a">Yes</string>
    <string name="mwra09b">No</string>
    <string name="mwra10">How frequently (in a month)?</string>
    <string name="mwra11">Did LHW counseled you for family planning?</string>
    <string name="mwra11a">Yes</string>
    <string name="mwra11b">No</string>
    <string name="mwra12">Which method/s she counseled for? (Do not prompt, select all that responded)</string>
    <string name="mwra12a">Female Sterilization</string>
    <string name="mwra12b">Male Sterilization</string>
    <string name="mwra12c">IUD (Intrauterine Device)</string>
    <string name="mwra12d">Injection (2 months)</string>
    <string name="mwra12e">Injection (3 months)</string>
    <string name="mwra12f">Inject. Syanapress</string>
    <string name="mwra12g">Implants</string>
    <string name="mwra12h">Pills</string>
    <string name="mwra12i">Condoms</string>
    <string name="mwra12j">Standard Days Method (SDM)</string>
    <string name="mwra12k">Lactation Amen method (LAM)</string>
    <string name="mwra12l">Rhythm method</string>
    <string name="mwra12m">Withdrawal</string>
    <string name="mwra1296">Other Specify</string>
    <string name="mwra13">Are you currently using any contraceptive?</string>
    <string name="mwra13a">Yes</string>
    <string name="mwra13b">No</string>
    <string name="mwra14">Which method you are currently using?</string>
    <string name="mwra14a">Female Sterilization</string>
    <string name="mwra14b">Male Sterilization</string>
    <string name="mwra14c">IUD (Intrauterine Device</string>
    <string name="mwra14d">Injection (2 months)</string>
    <string name="mwra14e">Injection (3 months)</string>
    <string name="mwra14f">Inject. Syanapress</string>
    <string name="mwra14g">Implants</string>
    <string name="mwra14h">Pills</string>
    <string name="mwra14i">Condoms</string>
    <string name="mwra14j">Standard Days Method (SDM)</string>
    <string name="mwra14k">Lactation Amen method (LAM)</string>
    <string name="mwra14l">Rhythm method</string>
    <string name="mwra14m">Withdrawal</string>
    <string name="mwra1496">Other Specify</string>
    <string name="mwra15">From where you got the current method to delay or avoid pregnancy?</string>
    <string name="mwra15a">Government Hospital</string>
    <string name="mwra15b">Family Welfare Centre</string>
    <string name="mwra15c">Mobile service camp</string>
    <string name="mwra15d">Lady Health Worker</string>
    <string name="mwra15e">Lady Health visitor</string>
    <string name="mwra15f">Private Hospital</string>
    <string name="mwra15g">Pharmacy, Chemist</string>
    <string name="mwra15h">Friend/Relative</string>
    <string name="mwra15i">Dai/TBA</string>
    <string name="vhctitle">Section: Village Health Committee (VHC)</string>
    <string name="vhchint">Note: This section will appear Single time for any male member of HH greater than the age of 19</string>
    <string name="vhc01">Is there any male member available in household?</string>
    <string name="vhc01a">Yes</string>
    <string name="vhc01b">No</string>
    <string name="vhc02">Are you aware of Village Health Committee (VHC)?</string>
    <string name="vhc02a">Yes</string>
    <string name="vhc02b">No</string>
    <string name="vhc03">Have you ever attended any session in VHC?</string>
    <string name="vhc03a">Yes</string>
    <string name="vhc03b">No</string>
    <string name="vhc04">When did you attend last VHC?</string>
    <string name="vhc04a">Last Week</string>
    <string name="vhc04b">Last Month</string>
    <string name="vhc04c">More than a Month</string>
    <string name="vhc05">Have you ever attended any family planning session in VHC?</string>
    <string name="vhc05a">Yes</string>
    <string name="vhc05b">No</string>
    <string name="vhc06">Reasons for not attending VHC session?</string>
    <string name="vhc06a">It is usually not necessary</string>
    <string name="vhc06b">Not allowed in family/ culture</string>
    <string name="vhc06c">Feeling Embarrassment</string>
    <string name="vhc06d">Dependent on others to accompanied</string>
    <string name="vhc06e">Poor friendly services</string>
    <string name="vhc06f">Not know any kind of sessions/services provided in the area</string>
    <string name="vhc06g">They charged fees</string>
    <string name="vhc06h">Session/ facility situated far from house</string>
    <string name="vhc06i">Attitude of facilitator</string>
    <string name="vhc06j">No privacy</string>
    <string name="vhc0696">Other (Specify)</string>
</resources>